--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ h1, h2, h3, h4, h5, h6 {
 	color: #394041;
 }
 
+button a {
+color:#fff;
+}
+
 a {
 	text-decoration: none;
 	color:#eb6431;
@@ -118,7 +122,7 @@ header {
 	position: absolute;
 	left:0px;
 	top:120px;
-	display: none;
+z-index:100000;
 }
 
 
@@ -235,10 +239,12 @@ footer {
 	float: left;
 	width: 100%;
 	margin-bottom:25px;
+		margin-top:75px;
 	background-color: #fff;
-	border-left:1px solid #dedede;
-	border-right:1px solid #dedede;
-	border-bottom:1px solid #dedede;
+border:1px solid #dedede;
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 .home-gradient {
@@ -252,10 +258,25 @@ footer {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#ffffff',GradientType=0 );
 }
 
+.mid-area.home-gradient {
+margin-top:-5px;
+}
+
 .column {
 	float: left;
 	width: 33.33%;
 	text-align: center;
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+.column:first-of-type {
+padding-left:113px;
+}
+
+.column:last-of-type {
+padding-right:107px;
 }
 
 .column img {
@@ -278,7 +299,7 @@ footer {
 
 aside {
 	float:right;
-	width: 409.5px;
+	width: 407px;
 	padding:30px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -300,6 +321,7 @@ aside ul li {
 
 aside ul li img {
 	width: 50%;
+max-height:100px;
 	padding-right:10px;
 	float:left;
 	-webkit-box-sizing: border-box;
@@ -329,7 +351,7 @@ aside ul li h4 {
 .content-area {
 	float: left;
 	width: 868px;
-	margin-top:25px;
+	margin-top:85px;
 	margin-bottom:25px;
 	background-color: #fff;
 	border:1px solid #dedede;
@@ -526,6 +548,7 @@ aside ul li h4 {
 	width:300px; 
 	float: right;
 	padding-top:25px;
+	margin-top:60px;
 }
 
 .widget {
@@ -587,6 +610,12 @@ table td b, table td span {
 	font-weight: normal !important;
 }
 
+#dsidx-listings .dsidx-listing {
+	border-radius:0px !important;
+	border: 1px solid #ccc !important;
+
+}
+
 .dsidx-search-widget .dsidx-search-button .submit {
 	padding:10px !important;
 }
@@ -595,4 +624,39 @@ table td b, table td span {
 	font-family: 'Lato', sans-serif !important;
 	font-size:18px !important;
 	font-weight:bold !important;
+}
+
+#dsidx-listings .dsidx-listing .dsidx-primary-data {
+	border-bottom:1px dotted #ccc !important;
+}
+
+.dsidx-address a {
+	color:#4cc8ea !important;
+}
+
+.dsidx-price {
+	background-color: #e3712c !important;
+}
+
+#dsidx-listings .dsidx-listing .dsidx-primary-data .dsidx-address a span {
+	display: inline !important;
+	color:#4cc8ea !important;
+	font-weight: bold !important;
+	font-size:16px !important;
+}
+
+#dsidx-listings .dsidx-listing .dsidx-media {
+	background:transparent !important;
+}
+
+#dsidx-listings .dsidx-listing .dsidx-media .dsidx-photo .dsidx-photo-count {
+	background-color: #4cc8ea !important;
+}
+
+#dsidx-disclaimer {
+	display: none;
+}
+
+.dsidx-standalone-disclaimer {
+	display: none;
 }
