--- a/style.css
+++ b/style.css
@@ -408,6 +408,10 @@ aside ul li h4 {
 	color: #394041;
 }
 
+.blog-post h2 a {
+	color:#1195d2;
+}
+
 .blog-post p {
 	line-height: 27px;
 	font-size: 14px;
@@ -589,8 +593,8 @@ aside ul li h4 {
 
 .list-and-build-ui {
 	width:100%;
-	height:113px;
 	background-image:url('images/listing-shadow.png');
+	background-repeat: no-repeat;
 	float:left;
 	margin-top:95px;
 	margin-bottom:25px;
@@ -639,6 +643,34 @@ aside ul li h4 {
 	width: 100%;
 	float:left;
 	clear: both;
+	margin-top:10px;
+}
+
+.building-list-item {
+	float: left;
+	padding:20px;
+	border:1px solid #dedede;
+	margin-top:15px;
+	margin-bottom:15px;
+}
+
+.building-list-item img {
+	width: 250px;
+	height: 190px;
+	float: left;
+	margin-right: 20px;
+}
+
+.building-list-item h4 {
+	padding-bottom:10px;
+	border-bottom:1px dotted #dedede;
+	margin-left: 270px;
+}
+
+.building-list-item h4 a {
+	font-weight: bold;
+	font-size: 17px;
+	color: #1195d2;
 }
 
 /* Carousel */
