--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ a {
 	color:#eb6431;
 }
 
-p, ol, ul {
-	color: #8b9293;
-	font-size: 13px;
+p, ol, ul, label {
+	color: #394041;
+	font-size: 16px;
 	line-height:24px;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 
 input[type=text] {
@@ -121,7 +121,7 @@ header {
 .sub-logo {
 	position: absolute;
 	left:0px;
-	top:120px;
+	top:90px;
 	z-index:100000;
 }
 
@@ -158,8 +158,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-	background-color: #fff;
-	color: #252A2B;
+	color: #eb6431;
 }
 
 nav ul li:hover ul {
@@ -170,7 +169,7 @@ nav ul li ul {
 	display: none;
 	background-color:#252A2B;
 	position: absolute;
-	top:33px;
+	top:32px;
 	left:0px;
 	text-align: left;
 	z-index: 9000000000000000;
@@ -219,7 +218,7 @@ nav ul li ul li a:hover {
 }
 
 .slider form {
-	width: 100%;
+	width: 1000px;
 	height:205px;
 	margin:0px;
 	z-index:10000;
@@ -230,6 +229,8 @@ nav ul li ul li a:hover {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	top:461px;
+	left:50%;
+	margin-left:-500px;
 	border-left:1px solid #dedede;
 	border-right:1px solid #dedede;
 	border-top:1px solid #dedede;
@@ -245,18 +246,30 @@ nav ul li ul li a:hover {
 
 .slider form input[type=text] {
 	margin:0px;
-	width: 80%;
+	width: 700px;
 	height: 46px;
 	float: left;
 }
 
 .slider input[type=submit] {
 	padding:15px;
+	margin-left: 10px;
 	font-weight: bold;
 	text-transform: uppercase;
 	display: inline;
-	float: right;
+	float:left;
 	clear: none;
+}
+
+.icons {
+	text-align: center;
+	margin-top: 40px;
+}
+
+.icons img {
+	display: inline;
+	margin-left:-4px;
+
 }
 
 /* Footer */
@@ -307,7 +320,26 @@ footer {
 }
 
 .mid-area.home-gradient {
-	margin-top:-5px;
+	margin-top:0px;
+}
+
+.home-gradient hr {
+	display: block;
+	background: none;
+	border:none;
+	border-top:4px solid #cfd2d3;
+	padding-bottom: 2px;
+	border-bottom:1px solid #cfd2d3;
+}
+
+.home-gradient h2 {
+	margin:0px;
+}
+
+.col-wrap {
+	width: 100%;
+	float: left;
+	margin-bottom: 40px;
 }
 
 .column {
@@ -381,10 +413,10 @@ aside ul li:last-of-type {
 }
 
 aside ul li img {
-	width: 50%;
+	width: 136px;
 	height: 90px;
 	max-height:100px;
-	margin-right:10px;
+	margin-right:15px;
 	float:left;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -396,11 +428,16 @@ aside ul li img {
 }
 
 aside ul li h4 {
-	width: 45%;
 	margin:0px;
-	float:right;
+	float:left;
 	text-align: left;
 	vertical-align: top;
+}
+
+aside ul li h4 a {
+	font-weight: bold;
+	font-size: 16px;
+	color:#394041;
 }
 
 /* Subpage Styles */
@@ -416,7 +453,7 @@ aside ul li h4 {
 
 .content-area {
 	float: left;
-	width: 868px;
+	width: 867px;
 	margin-top:85px;
 	margin-bottom:25px;
 	background-color: #fff;
