--- a/style.css
+++ b/style.css
@@ -50,6 +50,13 @@ input[type=text] {
 	padding:10px;
 }
 
+.nmap {
+	float: left;
+	width:100%;
+	height: 680px;
+	margin-bottom:20px;
+}
+
 textarea {
 	width: 100%;
 	min-height: 240px;
@@ -68,14 +75,25 @@ select {
 }
 
 button, input[type=submit] {
-	background-color: #e3712c;
+	background: #f28048; /* Old browsers */
+	background: -moz-linear-gradient(top,  #f28048 0%, #f16826 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f28048), color-stop(100%,#f16826)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #f28048 0%,#f16826 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #f28048 0%,#f16826 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #f28048 0%,#f16826 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #f28048 0%,#f16826 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f28048', endColorstr='#f16826',GradientType=0 ); /* IE6-9 */
 	font-size:13px;
 	color: #fff;
 	padding: 10px;
 	border:none;
-	border-radius:0px;
+	border-radius:6px;
 	display: block;
 	clear:both;
+	text-shadow: 0px -1px 0px rgba(100, 100, 100, 1);
+	text-transform: uppercase;
+	font-weight: bold;
+	border-bottom:1px solid #999;
 }
 
 .alignLeft {
